Resolves: tdf#41304 Add percent operator % to reference delimiters

Change-Id: I094fcb800a29de424db28e1b58f1239381a3b4a3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151001
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151012
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>